
syntax = "proto3";
package proto;

option java_package = "proto";
option java_outer_classname = "HouseProto";

message Empty {}

message Hello {
	string id = 1;
	string address = 2;
	int32 port = 3;
}

message Identifier {
	string id = 1;
}

message BoostRequest {
	string id = 1;
	int64 timestamp = 2;
}

message BoostResponse {
	string id = 1;
	
	enum BoostResponseType {
		UNKNOWN = 0;
		GRANT = 1;
		DENY = 2;
	}
	BoostResponseType type = 2;

}

message Measure {
	string id = 1;
	double value = 2;
	int64 timestamp = 3;
}


// deprecated

message Welcome {}

message Goodbye {}

message GoodbyeAck {}

message MeasureList {
	repeated Measure measures = 1;
}

message AskBoost {
	int64 timestamp = 1;
}

message GrantBoost {}

message DenyBoost {}

message EndBoost {}
